fixing obvious problems reported by findbugs
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@646 ba0df5e5-9053-6d9f-941f-f112716aa91a